--- a/src/main/resources/templates/statspage.html
+++ b/src/main/resources/templates/statspage.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<h2>Statistics</h2>
+	<div>
+	<h3>Top Scorers</h3>
     <table>
 		<tr>
 			<th>Name</th>
@@ -18,5 +20,6 @@
     		<td th:text="${player.goals}"></td>
     	</tr>
      </table>
+     </div>
 </body>
 </html>
