--- a/src/main/resources/templates/statspage.html
+++ b/src/main/resources/templates/statspage.html
@@ -21,5 +21,20 @@
     	</tr>
      </table>
      </div>
+     	<div>
+	<h3>Most assists</h3>
+    <table>
+		<tr>
+			<th>Name</th>
+		    <th>Team</th>
+		    <th>Goals</th>
+		</tr>  
+    	<tr th:each = "player : ${players2}">
+    		<td th:text="${player.name}"></td>
+    		<td th:text="${player.team.name}"></td>
+    		<td th:text="${player.assists}"></td>
+    	</tr>
+     </table>
+     </div>
 </body>
 </html>
