--- a/src/main/resources/templates/leaguetable.html
+++ b/src/main/resources/templates/leaguetable.html
@@ -3,8 +3,17 @@
 <head>
     <title>Statistics</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="/css/navbar.css" th:href="@{/css/navbar.css}"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
+	<ul>
+  	<li><a href="/home">Home</a></li>
+  	<li><a href="/leaguetable">Tables</a></li>
+  	<li><a href="/stats">Stats</a></li>
+  	<li><a href="/players">PlayerDB</a></li>
+  	<li style="float:right"><a href="/login">Login</a></li>
+	</ul>
 	<h2>League Table</h2>
 	<div>
     <table>
