--- a/src/main/resources/templates/statspage.html
+++ b/src/main/resources/templates/statspage.html
@@ -3,12 +3,21 @@
 <head>
     <title>Statistics</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="/css/navbar.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
+	<ul>
+  	<li><a href="/home">Home</a></li>
+  	<li><a href="/leaguetable">Tables</a></li>
+  	<li><a href="/stats">Stats</a></li>
+  	<li><a href="/players">PlayerDB</a></li>
+  	<li style="float:right"><a href="/login">Login</a></li>
+	</ul>
 	<h2>Statistics</h2>
 	<div>
 	<h3>Top Scorers</h3>
-    <table>
+    <table class="table table-striped">
 		<tr>
 			<th>Name</th>
 		    <th>Team</th>
@@ -23,7 +32,7 @@
      </div>
      	<div>
 	<h3>Most assists</h3>
-    <table>
+    <table class="table table-striped">
 		<tr>
 			<th>Name</th>
 		    <th>Team</th>
