--- a/src/main/resources/templates/addplayer.html
+++ b/src/main/resources/templates/addplayer.html
@@ -3,6 +3,7 @@
 <head>
     <title>New player</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>New player</h1>
