--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -3,10 +3,18 @@
 <head>
     <title>FantasyFootball</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="/css/navbar.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
-	<h1>Welcome</h1>
-	<a></a>
-	<a></a>
+<ul>
+  	<li><a href="/home">Home</a></li>
+  	<li><a href="/leaguetable">Tables</a></li>
+  	<li><a href="/stats">Stats</a></li>
+  	<li><a href="/players">PlayerDB</a></li>
+  	<li style="float:right"><a href="/login">Login</a></li>
+</ul>
+	<h1 style="text-align:center">Welcome</h1>
+	
 </body>
 </html>
