league table tyyli

--- a/src/main/resources/templates/leaguetable.html
+++ b/src/main/resources/templates/leaguetable.html
@@ -16,7 +16,7 @@
 	</ul>
 	<h2>League Table</h2>
 	<div>
-    <table>
+    <table class="table table-striped">
 		<tr>
 			<th>Position</th>
 		    <th>Team</th>
